--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/aniketghavte/dns-server-form-scratch#readme",
   "dependencies": {
     "@leichtgewicht/ip-codec": "^2.0.5",
+    "chalk": "^5.6.2",
     "dotenv": "^16.4.5",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
